# ai-workflows

./: .gitignore  Makefile  README.md  pyproject.toml
ai_workflows/: __init__.py  cli.py  installer.py
plugins/: README.md
plugins/_template/: README.md  plugin.yaml
plugins/_template/config/: claude.json  codex.json  opencode.yaml
plugins/code-quality/: README.md
plugins/context-management/: README.md  plugin.yaml
plugins/context-management/scripts/: install.py
plugins/debugging/: README.md
plugins/devops/: README.md
plugins/documentation/: README.md  plugin.yaml
plugins/init/: README.md  plugin.yaml
plugins/init/scripts/: init.py
plugins/orchestrator/: README.md  plugin.yaml
plugins/orchestrator/agents/: architect.md  implementer.md  last-mile.md  quality.md
plugins/orchestrator/commands/: orchestrate.md
plugins/orchestrator/scripts/: orchestrator-init.py
plugins/orchestrator/skills/orchestrate/: SKILL.md
plugins/pr-review/: README.md  plugin.yaml
plugins/pr-review/.claude-plugin/: plugin.json
plugins/pr-review/agents/: correctness-reviewer.md  finding-verifier.md  quality-reviewer.md  research.md  reviewer.md  security-reviewer.md  testing-reviewer.md
plugins/pr-review/commands/: cve-diff.md  fresh-eyes.md
plugins/pr-review/scripts/: post-pr-review.py  pr-review-buckets.json  pr-review-preflight.py
plugins/pr-review/skills/insecure-defaults/: SKILL.md
plugins/pr-review/skills/pr-review/: SKILL.md
plugins/pr-review/skills/stale-pr-triage/: SKILL.md
plugins/refactoring/: README.md
plugins/search-navigation/: README.md
plugins/testing/: README.md
rules/: README.md  jira.md  local-repos.md  pr-disclaimers.md  pr-review-principles.md  scratchpad.md  search.md
