[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workflows"
version = "0.1.0"
description = "Coding agent plugins for Claude Code, Codex, and OpenCode"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
pr-review          = []
documentation      = []
context-management = []
init               = []
orchestrator       = []
all = [
  "ai-workflows[pr-review]",
  "ai-workflows[documentation]",
  "ai-workflows[context-management]",
  "ai-workflows[init]",
  "ai-workflows[orchestrator]",
]

[project.scripts]
ai-workflows = "ai_workflows.cli:main"

# Bundle plugins/ and rules/ from the repo root into the installed package
[tool.hatch.build.targets.wheel.sources]
"plugins" = "ai_workflows/plugins"
"rules"   = "ai_workflows/rules"

[tool.hatch.build.targets.wheel]
packages = ["ai_workflows"]
